--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Phpfunc\\": "src/",
+      "Apisql\\": "src/",
       "Config\\": "config/"
     }
   },
@@ -32,7 +32,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Phpfunc\\Tests\\": "tests/"
+      "Apisql\\Tests\\": "tests/"
     }
   }
 }
